--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,14 @@
 }
 #content {
     max-width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
     overflow-x: hidden;
 }
 .container-info-personal {
-    /* background-color: ; */
-    max-width: 500px;
+    display: flex;
+    flex-direction: column;
 }
 header {
     display: flex;
@@ -19,6 +22,12 @@ header {
     flex-direction: column;
     padding: 10px;
 
+}
+h2 {
+    margin-top: 20px;
+}
+h3 {
+    margin-bottom: 20px;
 }
 hr {
     width: 90%;
@@ -50,6 +59,7 @@ svg.icons-texts-sections {
 }
 .title {
     font-size: 20px;
+    font-weight: 600;
 }
 .content-infos-data {
     margin-left: 20px;
@@ -57,4 +67,117 @@ svg.icons-texts-sections {
 .section-texts {
     margin-top: 10px;
     display: flex;
+}
+
+.container-info-vocational {
+    margin: 2rem;
+
+}
+.container-info-vocational section {
+    margin: 2rem 0;
+}
+svg.icons-sections-vocational {
+    width: 30px;
+    height: 30px;
+    fill: var(--blue-primary);
+    margin-right: 10px;
+}
+
+.info-vocational {
+    display:flex;
+    margin-top: 10px;
+    min-height: 70px;
+    
+}
+.container-line  {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 15px;
+}
+.container-line .square{
+    content: '';
+    width: 10px;
+    margin-bottom: 5px;
+    height: 10px;
+    border: 1px solid var(--blue-primary);
+    background-color:  var(--blue-primary);
+}
+.container-line .line{
+    content: '';
+    width: 1px;
+    height: 100%;
+    border: 1px solid var(--blue-primary);
+    background-color:  var(--blue-primary);
+
+}
+.period {
+    font-weight: 600;
+    margin: 5px 0;
+}
+.company {
+    font-weight: 600;
+}
+.same-company {
+    margin: 0;
+}
+.same-company .container-line .square {
+    margin: 0;
+}
+.same-company .period {
+    margin: 0;
+}
+.responsibility-functions {
+    padding-bottom: 20px;
+}
+.responsibility {
+    font-weight: 600;
+}
+.functions {
+    line-height: 25px;
+    margin-left: 2rem;
+
+}
+.skills {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    max-width: 800px;
+}
+.container-progress {
+    content: '';
+    width: 100px;
+    height: 20px;
+    background-color: var(--grey-secondary);
+}
+.container-progress .progress {
+    content: '';
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5px;
+    background-color: var(--blue-primary);
+}
+.title-skill {
+    font-weight: 600;
+}
+@media (min-width: 1000px) { 
+    #content {
+        flex-direction: row;
+    }
+    .container-info-personal {
+        height: 100%;
+    }
+    .container-info-personal {
+        max-width: 500px;
+    }
+    .container-info-vocational {
+        margin: 0 0 0 4rem;
+        max-height: 100vh;
+        width: 100%;
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
 }
