--- a/css/accordion.css
+++ b/css/accordion.css
@@ -9,9 +9,8 @@ input[type='checkbox'] {
 .lbl-toggle {
   display: block;
   font-weight: bold;
-  font-family: monospace;
+  font-family: Roboto;
   font-size: 1.2rem;
-  text-transform: uppercase;
   text-align: center;
   padding: 1rem;
   color: var(--black-60);;
